2009-03-21  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R: Always use UTC time zone.

	* R/AAA.R (.onLoad): No longer try to start a MPI cluster.

2009-03-20  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readDOC): Options can be passed over to antiword.

	* R/reader.R (readPDF): Options can be passed over to pdfinfo and
	pdftotext.

2009-03-10  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (DirSource): Add pattern and ignore.case arguments
	which are internally passed over to list.files().

2009-03-02  Ingo Feinerer  <feinerer@logic.at>

	* inst/doc/tm.Rnw: Suppress pointless loading message.

2009-01-29  Ingo Feinerer  <feinerer@logic.at>

	* DESCRIPTION: Speed up package loading (via moving packages not
	strictly necessary for normal operation to Suggests instead of
	Depends).

2009-01-08  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readNewsgroup): The date format is now configurable.

2008-12-20  Ingo Feinerer  <feinerer@logic.at>

	* R/preprocess.R (convertMboxEml): Fix off-by-one error.

2008-12-16  Ingo Feinerer  <feinerer@logic.at>

	* R/termdocmatrix.R (TermDocMatrix): Sort row indices.

2008-12-06  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (DataframeSource): New source class for data frames.

	* R/source.R: Fixed non-standard call evaluation.

2008-11-29  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (URISource): New source class for a single document.

2008-11-27  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R: Refactoring.

2008-11-25  Ingo Feinerer  <feinerer@logic.at>

	* R/AAA.R (.onLoad, .Last): Use tryCatch() to handle misconfigured
	Rmpi installations more gracefully.

2008-11-08  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (Source): Add Length slot.

2008-11-06  Ingo Feinerer  <feinerer@logic.at>

	* R/AAA.R: Unify duplicated .onLoad function.

2008-11-03  Ingo Feinerer  <feinerer@logic.at>

	* DESCRIPTION (Suggests): Added Rmpi.

2008-11-02  Ingo Feinerer  <feinerer@logic.at>
