@@ -1,5 +1,8 @@
 2009-03-21  Ingo Feinerer  <feinerer@logic.at>
 
+	* R/reader.R (readCustom): Experimental reader which can be
+	customized via user-defined mappings.
+
 	* R/reader.R: Always use UTC time zone.
 
 	* R/AAA.R (.onLoad): No longer try to start a MPI cluster.
